--- a/house prise.ipynb
+++ b/house prise.ipynb
@@ -2,14 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
     "import pandas as pd\n",
     "import copy\n",
     "import matplotlib.pyplot as plt"
@@ -24,16 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
+   "execution_count": 197,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "dataset=pd.read_table(\"C:/Users/Gerald/Downloads/housing_prices.txt\")\n"
+    "dataset=pd.read_table(\"C:/Users/Gerald/Downloads/housing_prices.txt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 198,
    "metadata": {
     "collapsed": true
    },
@@ -44,16 +65,36 @@
     "for i in city:\n",
     "    dataset[str('city='+i+'?')]=(dataset['City']==i)*1\n",
     "# Normalize each column\n",
-    "dataset['sqft_std']=(dataset['sqft']-dataset['sqft'].mean()+0.0)/dataset['sqft'].std()\n",
-    "dataset['price_std']=(dataset['price']-dataset['price'].mean()+0.0)/dataset['price'].std()\n",
-    "dataset['bedrooms_std']=(dataset['bedrooms']-dataset['bedrooms'].mean()+0.0)/dataset['bedrooms'].std()\n",
-    "dataset['bath_std']=(dataset['baths']-dataset['baths'].mean()+0.0)/dataset['baths'].std()\n",
-    "dataset['bias']=1"
+    "dataset['sqft_std']=(dataset['sqft']-dataset['sqft'].min()+0.0)/(dataset['sqft'].max()-dataset['sqft'].min())\n",
+    "dataset['price_std']=(dataset['price']-dataset['price'].min()+0.0)/(dataset['price'].max()-dataset['price'].min())\n",
+    "dataset['bedrooms_std']=(dataset['bedrooms']-dataset['bedrooms'].min()+0.0)/(dataset['bedrooms'].max()-dataset['bedrooms'].min())\n",
+    "dataset['bath_std']=(dataset['baths']-dataset['baths'].min()+0.0)/(dataset['baths'].max()-dataset['baths'].min())\n",
+    "dataset['bias']=1\n",
+    "dataset['rand']=np.random.uniform(0,1,len(dataset))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: FutureWarning: by argument to sort_index is deprecated, pls use .sort_values(by=...)\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset=dataset.sort_index(by='rand')\n",
+    "dataset=dataset.drop(['rand'],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
    "metadata": {
     "collapsed": true
    },
@@ -65,6 +106,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Y=dataset['price_std']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -73,11 +125,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.3)"
+    "X_train=X[0:round(0.7*len(X))]\n",
+    "X_test=X[round(0.7*len(X)):len(X)]\n",
+    "Y_train=Y[0:round(0.7*len(X))]\n",
+    "Y_test=Y[round(0.7*len(X)):len(X)]"
    ]
   },
   {
@@ -89,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 203,
    "metadata": {
     "collapsed": true
    },
@@ -103,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 204,
    "metadata": {
     "collapsed": true
    },
@@ -117,56 +172,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-1.61554594 -0.33775383 -1.13030701 -0.3164122  -0.2676181   0.01222905\n",
-      "  0.         -0.51907089  0.          0.88454386  2.08428485  0.12913548\n",
-      "  0.58091655  0.         -0.36818749  0.40329437 -0.51090208 -1.05666029\n",
-      " -0.74303037  1.1611613   2.1500085   0.          0.10891323  0.2777934\n",
-      " -0.29820557 -0.4898905   1.08306492  1.69737926  1.15844969 -0.29103031\n",
-      "  1.41784951 -0.51309696 -0.2072714   0.56390604  0.69249027 -0.42341858\n",
-      "  0.6811468  -0.54300352 -0.31962107 -1.18978866  0.23203534  0.1838062\n",
-      "  0.10560482 -0.85983779 -2.09271698  0.46994237 -1.45079471 -0.47301783\n",
-      "  0.80117643  0.36729809 -0.28944679  0.06077376]\n"
+      "[  0.00000000e+00   0.00000000e+00   5.33160043e-05   0.00000000e+00\n",
+      "   0.00000000e+00   3.12101513e-05   2.60233214e-05   5.33693588e-05\n",
+      "   5.20243499e-05   0.00000000e+00   1.72413793e-04   5.18831611e-05\n",
+      "   0.00000000e+00   8.93204807e-06   9.06729206e-05   0.00000000e+00\n",
+      "   8.16071147e-05   0.00000000e+00   8.17555859e-05   7.12037310e-05\n",
+      "   1.05386278e-04   3.56836063e-05   1.23384132e-04   6.09415360e-05\n",
+      "   8.29744166e-05   9.47005163e-05   1.92492324e-04   1.35110231e-04\n",
+      "   1.49972208e-04   6.68788957e-06   1.20099635e-04   5.35031166e-05\n",
+      "   3.99935796e-05   4.29659750e-05   1.00927685e-04   3.56836063e-05\n",
+      "   3.89532412e-05   1.78343722e-05   2.16002336e-04   1.38825725e-04\n",
+      "   1.84266220e-04   3.85073819e-05   4.59383704e-05   1.08522155e-04\n",
+      "   7.43098841e-06   3.77999518e-04   2.06730098e-05   9.05243008e-05\n",
+      "   1.58765102e-03   1.82991558e-03   1.20496316e-03   3.44039589e-03]\n"
      ]
     }
    ],
    "source": [
     "r=0.01\n",
-    "weight=np.zeros(52)\n",
-    "grad=gradient(weight)\n",
+    "theta=np.zeros(52)\n",
+    "grad=gradient(theta)\n",
     "cost1=1\n",
     "cost2=0\n",
-    "while cost1>cost2 and np.max(gradient(weight))>0.00001:\n",
-    "    cost1=cost_function(weight)\n",
-    "    weight=weight-r*gradient(weight)\n",
-    "    cost2=cost_function(weight)\n",
-    "weight=weight-r*gradient(weight)\n",
-    "print(weight)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0505230510166\n"
-     ]
-    }
-   ],
-   "source": [
-    "residual=Y_train-np.dot(weight, X_train.T)\n",
-    "MSE=sum([i*i for i in residual])/len(residual)\n",
-    "print(MSE)"
+    "while cost1>cost2 and np.max(gradient(theta))>0.00001:\n",
+    "    cost1=cost_function(theta)\n",
+    "    theta=theta-r*gradient(theta)\n",
+    "    cost2=cost_function(theta)\n",
+    "theta=theta-r*gradient(theta)\n",
+    "print(theta)"
    ]
   },
   {
@@ -178,59 +218,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.476669250798\n"
+      "0.175762755871\n"
      ]
     }
    ],
    "source": [
-    "residual=Y_test-np.dot(weight, X_test.T)\n",
+    "residual=Y_train-np.dot(theta, X_train.T)\n",
     "MSE=sum([i*i for i in residual])/len(residual)\n",
     "print(MSE)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 112,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## perception model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#set $500,000 as a threhold\n",
-    "c=(500000-dataset['price'].mean())/dataset['price'].std()\n",
-    "IsExp=(Y_test>c)*1"
+    "c=(500000-dataset['price'].min())/(dataset['price'].max()-dataset['price'].min())\n",
+    "IsExp_test=(Y_test>c)*1\n",
+    "IsExp_train=(Y_train>c)*1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
+   "execution_count": 215,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "Is_Exp_predict=(np.dot(weight, X_test.T)>c)"
+    "weight=np.zeros(52)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 216,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def predict(weight,Xi,y):\n",
+    "    M=np.dot(weight,Xi)\n",
+    "    if M>0:\n",
+    "        N=1\n",
+    "    else:\n",
+    "        N=0\n",
+    "    if N==y:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.96\n"
+      "0\n"
      ]
     }
    ],
    "source": [
-    "correctRate=sum(Is_Exp_predict==IsExp)/len(IsExp)\n",
+    "r=0.1\n",
+    "for loop in range(1000):\n",
+    "    wrong=0\n",
+    "    for i in X_train.index:\n",
+    "        if predict(weight,X_train.loc[i],IsExp_train[i])==1:\n",
+    "            pass\n",
+    "        else:\n",
+    "            weight=weight+r*(2*IsExp_train[i]-1)*X_train.loc[i]\n",
+    "            wrong=wrong+1\n",
+    "    if wrong==0:\n",
+    "        break\n",
+    "    else:\n",
+    "        pass\n",
+    "print(wrong)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "IsExp_predict=copy.deepcopy(IsExp_test)\n",
+    "for i in IsExp_predict.index:\n",
+    "    IsExp_predict.loc[i]=(np.dot(theta,X_test.loc[i])>0)*1\n",
+    "correctRate=sum(IsExp_predict==IsExp_test)/len(IsExp_test)\n",
     "print(correctRate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.185074974359\n"
+     ]
+    }
+   ],
+   "source": [
+    "residual=Y_train-np.dot(weight, X_train.T)\n",
+    "MSE=sum([i*i for i in residual])/len(residual)\n",
+    "print(MSE)"
    ]
   },
   {
